pagination for userdetails - text review, success message after review

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,8 @@
 
 <body>
 
+    {% comment %} {% include 'messages.html' %} {% endcomment %}
+
     {% block scripts %}
     {% endblock scripts %}
 
