--- a/templates/users/user_details.html
+++ b/templates/users/user_details.html
@@ -53,14 +53,6 @@
                             d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
                     </svg>
                 </a>
-                <a href="{% url 'users:all_ratings' %}"
-                    class="inline-flex items-center justify-center py-3 hover:text-gray-400 hover:bg-gray-700 focus:text-gray-400 focus:bg-gray-700 rounded-lg">
-                    <span class="sr-only">Statistics</span>
-                    <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
-                    </svg>
-                </a>
                 <a href="#"
                     class="inline-flex items-center justify-center py-3 hover:text-gray-400 hover:bg-gray-700 focus:text-gray-400 focus:bg-gray-700 rounded-lg">
                     <span class="sr-only">Documents</span>
@@ -178,14 +170,6 @@
                     stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-                </svg>
-            </a>
-            <a href="{% url 'users:all_ratings' %}"
-                class="inline-flex items-center justify-center py-3 hover:text-gray-400 hover:bg-gray-700 focus:text-gray-400 focus:bg-gray-700 rounded-lg">
-                <span class="sr-only">Statistics</span>
-                <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
                 </svg>
             </a>
             <a href="#"
@@ -360,7 +344,7 @@
                         <dt class="text-sm font-medium text-gray-500">
                             Communication
                         </dt>
-                        {% if avg_rating.avg_rating.avg_communication >= 4 and  avg_rating.avg_rating.avg_communication <= 5%}
+                        {% if avg_rating.avg_communication >= 4 and  avg_rating.avg_communication <= 5%}
                         <dd class="mt-1 text-sm text-green-600 sm:mt-0 sm:col-span-2">
                             <strong>{{ avg_rating.avg_communication| floatformat:2 }}</strong>
                         </dd>
@@ -378,7 +362,7 @@
                         <dt class="text-sm font-medium text-gray-500">
                             Organize
                         </dt>
-                        {% if avg_rating.avg_teamwork >= 4 and avg_rating.avg_teamwork <= 5 %}
+                        {% if avg_rating.avg_organize >= 4 and avg_rating.avg_organize <= 5 %}
                         <dd class="mt-1 text-sm text-green-600 sm:mt-0 sm:col-span-2">
                             <strong>{{ avg_rating.avg_organize| floatformat:2 }}</strong>
                         </dd>
@@ -396,7 +380,7 @@
                         <dt class="text-sm font-medium text-gray-500">
                             Problem solving
                         </dt>
-                        {% if avg_rating.avg_teamwork >= 4 and avg_rating.avg_teamwork <= 5 %}
+                        {% if avg_rating.avg_problem_solving >= 4 and avg_rating.avg_problem_solving <= 5 %}
                         <dd class="mt-1 text-sm text-green-600 sm:mt-0 sm:col-span-2">
                             <strong>{{ avg_rating.avg_problem_solving| floatformat:2 }}</strong>
                         </dd>
@@ -454,7 +438,7 @@
                 </h3>
             </div>
             <div class="border-t border-gray-200">
-                {% for review in user_review %}
+                {% for review in page_obj %}
                 <dl>
                     <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
                         <dt class="text-sm font-medium text-gray-500">
@@ -468,6 +452,55 @@
                 </dl>
                 {% endfor %}
             </div>
+
+            <div class="flex flex-col items-center my-12">
+                <div class="flex text-gray-700">
+                    {% if page_obj.has_previous %}
+
+                    <div
+                        class="h-12 w-12 mr-1 flex justify-center items-center rounded-full bg-gray-200 cursor-pointer">
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="none"
+                                viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-chevron-left w-6 h-6">
+                                <polyline points="15 18 9 12 15 6"></polyline>
+                            </svg>
+                        </a>
+                    </div>
+
+                    {% endif %}
+
+                    {% for num in page_obj.paginator.page_range %}
+                    <div class="flex h-12 font-medium rounded-full bg-gray-200">
+                        {% if page_obj.number == num %}
+                        <div
+                            class="w-12 md:flex justify-center items-center hidden  cursor-pointer leading-5 transition duration-150 ease-in  rounded-full bg-teal-600 text-white">
+                            <a class="w-12 md:flex justify-center items-center hidden  cursor-pointer leading-5 transition duration-150 ease-in  rounded-full"
+                                href="?page={{ num }}">{{ num }}</a></div>
+                        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                        <div
+                            class="w-12 md:flex justify-center items-center hidden  cursor-pointer leading-5 transition duration-150 ease-in  rounded-full">
+                            <a class="page-link" href="?page={{ num }}">{{ num }}</a></div>
+                        {% endif %}
+                    </div>
+                    {% endfor %}
+
+
+                    {% if page_obj.has_next %}
+                    <div
+                        class="h-12 w-12 ml-1 flex justify-center items-center rounded-full bg-gray-200 cursor-pointer">
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="none"
+                                viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-chevron-right w-6 h-6">
+                                <polyline points="9 18 15 12 9 6"></polyline>
+                            </svg>
+                        </a>
+                    </div>
+                    {% endif %}
+                </div>
+            </div>
+
         </main>
     </div>
 </body>
