--- a/templates/search.html
+++ b/templates/search.html
@@ -198,6 +198,17 @@
                     <h2 class="text-gray-600 ml-0.5">Mobile UX/UI Design course</h2>
                 </div>
                 <div class="flex flex-wrap items-start justify-end -mb-3">
+                    {% comment %} SEARCH {% endcomment %}
+                    <form class="d-flex" method='GET' action="{% url 'users:search' %}">
+                        <div class="search shadow flex">
+                            <input class="w-full rounded p-3" type="text" name='q' placeholder="Search...">
+                            <button class="text-purple-600 bg-white w-auto flex justify-end items-center text-blue-500 p-2 hover:text-blue-400" type="submit">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                                </svg>
+                            </button>
+                        </div>
+                    </form>
                     <a href={% url 'users:edit_user' pk=user.pk %}><button
                             class="inline-flex px-5 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
                             <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
