--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
+{% block dashboard_nav %}
+{% endblock dashboard_nav %}
+
 {% block title %}Create an account{% endblock title %}
 
 {% block content %}
