--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,15 +18,6 @@
             {% endfor %}
         </div>
 
-        <div class="relative px-4 py-3 leading-normal text-red-700 bg-red-100 rounded-lg" role="alert">
-            <span class="absolute inset-y-0 left-0 flex items-center ml-4">
-                <svg class="w-4 h-4 fill-current" viewBox="0 0 20 20"><path d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" fill-rule="evenodd"></path></svg>
-            </span>
-            {% for m in messages %}
-            <li {% if m.tags %} class="{{ m.tags }}" {% endif %}>{{ m }}</li>
-            {% endfor %}
-        </div>
-
         {% endif %}
 
         <main class="p-6 sm:p-10 space-y-6">
@@ -122,7 +113,7 @@
             </section>
             <section class="grid md:grid-cols-2 xl:grid-cols-4 xl:grid-rows-3 xl:grid-flow-col gap-6">
                 <div class="flex flex-col md:col-span-2 md:row-span-2 bg-white shadow rounded-lg">
-                    <div class="px-6 py-5 font-semibold border-b border-gray-100">Teamwork ratings</div>
+                    <div class="px-6 py-5 font-semibold border-b border-gray-100">Top attributes</div>
 
                 </div>
                 <div class="flex items-center p-8 bg-white shadow rounded-lg">
@@ -157,18 +148,7 @@
                 {% comment %} OVERAL RATING BY SUM OF ALL CRITERIAS {% endcomment %}
                 <div class="row-span-3 bg-white shadow rounded-lg">
                     <div class="flex items-center justify-between px-6 py-5 font-semibold border-b border-gray-100">
-                        <span>Top employees by overall rating</span>
-                        <button type="button"
-                            class="inline-flex justify-center rounded-md px-1 -mr-1 bg-white text-sm leading-5 font-medium text-gray-500 hover:text-gray-600"
-                            id="options-menu" aria-haspopup="true" aria-expanded="true">
-                            Ascending
-                            <svg class="-mr-1 ml-1 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                                fill="currentColor">
-                                <path fill-rule="evenodd"
-                                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </button>
+                        <span>Top 10 employees by overall rating</span>
                         <!-- Refer here for full dropdown menu code: https://tailwindui.com/components/application-ui/elements/dropdowns -->
                     </div>
                     <div class="overflow-y-auto" style="max-height: 24rem;">
@@ -188,12 +168,19 @@
                     </div>
                 </div>
                 <div class="flex flex-col row-span-3 bg-white shadow rounded-lg">
-                    <div class="px-6 py-5 font-semibold border-b border-gray-100">Students by type of studying</div>
-                    <div class="p-4 flex-grow">
-                        <div
-                            class="flex items-center justify-center h-full px-4 py-24 text-gray-400 text-3xl font-semibold bg-gray-100 border-2 border-gray-200 border-dashed rounded-md">
-                            Chart</div>
-                    </div>
+                    <div class="px-6 py-5 font-semibold border-b border-gray-100">Top performing offices</div>
+                    {% for office in offices_performance %}
+                        <ul class="p-6 space-y-6">
+                            <li class="flex items-center">
+                                <div class="h-10 w-10 mr-3 bg-gray-100 rounded-full overflow-hidden">
+                                    <img src="https://randomuser.me/api/portraits/women/82.jpg"
+                                        alt="Annette Watson profile picture">
+                                </div>
+                                <span class="text-gray-600">{{ office.reviewed_user__work_office__office_name}}</span>
+                                <span class="ml-auto font-semibold">{{ office.all| floatformat:2 }}</span>
+                            </li>
+                        </ul>
+                    {% endfor %}
                 </div>
             </section>
 
