--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+
+{% block dashboard_nav %}
+{% endblock dashboard_nav %}
+
 {% block title %}Log-in{% endblock %}
 
 {% block content %}
