--- a/templates/ratings/rate.html
+++ b/templates/ratings/rate.html
@@ -25,7 +25,7 @@
                     Personal details.
                 </p>
                 <p class="mt-1 max-w-2xl text-sm text-gray-500">
-                    Rate user in scale from 1 to 5 by each category.
+                    Rate user in scale from 1 to 10 by each attribute.
                 </p>
             </div>
             <form method="post">
@@ -109,6 +109,38 @@
                             </dt>
                             <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
                                 {{ form.rate_reliability }}
+                            </dd>
+                        </div>
+                        <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                            <dt class="text-sm font-medium text-gray-500">
+                                <b>Honesty and integrity</b>
+                                <p>Telling the truth about tricky subjects, such as workload, work/life balance,
+                                    difficult customers or colleagues.</p>
+                            </dt>
+                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                {{ form.rate_honesty_integrity }}
+                            </dd>
+                        </div>
+                        <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                            <dt class="text-sm font-medium text-gray-500">
+                                <b>Emotional intelligence</b>
+                                <p>Emotional intelligence (EQ) is about being mindful of one’s own state of emotions, as
+                                    well as those in the team. Knowing how to manage these well is an important key to
+                                    being a good employee.</p>
+                            </dt>
+                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                {{ form.rate_emotional_intelligence }}
+                            </dd>
+                        </div>
+                        <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                            <dt class="text-sm font-medium text-gray-500">
+                                <b>Willingness to learn</b>
+                                <p>Hard skills attained through education are not enough for good employees – they’re
+                                    open minded to new ideas, and they share their thoughts and personal insights with
+                                    the team.</p>
+                            </dt>
+                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                {{ form.rate_willingness_to_learn }}
                             </dd>
                         </div>
                         <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
